# proxy-checker-app

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: proxy.py
app/core/: config.py  schemas.py
app/services/: proxy_checker.py
static/: index.html
tests/: test_proxy.py
